--- a/themes/landing-page-hugo/layouts/partials/contact.html
+++ b/themes/landing-page-hugo/layouts/partials/contact.html
@@ -15,9 +15,9 @@
 				</ul>
 			</div>
 
-		</div><!-- /.row -->
-	</div><!-- /.container -->
-</div><!-- /.contact -->
+		</div>
+	</div>
+</div>
 </section>
 {{ end }}
 -->
